finished contact page

--- a/contact.html
+++ b/contact.html
@@ -11,30 +11,31 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◾</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
-
-<body>
+<body style="background-image: url('./images/typhoon/2.4.webp');">
     <header>
         <div style="margin-right: 100px;">
             <h1><a href='./index.html'>Zødiac</a></h1>
-            <h3 style='margin-top: -10px'>Code & 3d art</h3>
+            <h3 style='margin-top: -16px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
             <a href='https://github.com/ZodiacFRA'>
                 <img class="header_icon" src="./images/misc/github.svg">
             </a>
-            <a href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - ">
-                <img
-                    style="filter: brightness(0) saturate(100%) invert(89%) sepia(31%) saturate(425%) hue-rotate(6deg) brightness(107%) contrast(103%);"
-                    class="header_icon"
-                    src="./images/misc/email.svg"
-                >
-            </a>
         </div>
     </header>
-<!---------------------------------------------------------------------------COMMON END-->
-    <h2>
-        <a style="word-break: break-word;" class="centered_title" href='mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - '>
-            2tqdd9wpn@relay.firefox.com
-        </a>
-    </h2>
+<!---------------------------------------------------------------------------HEADER END-->
+    <a
+        href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - "
+        style="text-decoration: none; display: flex; align-items: flex-end; border-top: 1px solid white;"
+    >
+        <img
+            style="margin-right: 20px; margin-bottom: 4px;"
+            class="header_icon"
+            src="./images/misc/email.svg"
+        >
+        <div>
+            <h2 style="border: none;">2tqdd9wpn@relay.firefox.com</h2>
+            <h3>Send me an email !</h3>
+        </div>
+    </a>
 </body>
