--- a/projects/tau.html
+++ b/projects/tau.html
@@ -11,31 +11,24 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◾</text></svg>">
     <link rel="stylesheet" href="../style.css">
 </head>
-
 <body>
     <header>
         <div style="margin-right: 100px;">
             <h1><a href='../index.html'>Zødiac</a></h1>
-            <h3 style='margin-top: -10px'>Code & 3d art</h3>
+            <h3 style='margin-top: -16px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
             <a href='https://github.com/ZodiacFRA'>
                 <img class="header_icon" src="../images/misc/github.svg">
             </a>
-            <a href="./contact.html">
+            <a href="../contact.html">
                 <img class="header_icon" src="../images/misc/email.svg">
             </a>
         </div>
     </header>
-    <div id="line_container">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-    </div>
+<!---------------------------------------------------------------------------HEADER END-->
     <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
     <img src="../images/tau/3.1.webp">
     <img src="../images/tau/3.2.webp">
     <img src="../images/tau/3.3.webp">
-
-    <script src="../scripts/scroll_animation.js"></script>
 </body>
