--- a/projects/tau.html
+++ b/projects/tau.html
@@ -28,7 +28,9 @@
     </header>
 <!---------------------------------------------------------------------------HEADER END-->
     <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-    <img src="../images/tau/3.1.webp">
-    <img src="../images/tau/3.2.webp">
-    <img src="../images/tau/3.3.webp">
+    <div class="project_layout">
+        <img src="../images/tau/3.1.webp">
+        <img src="../images/tau/3.3.webp">
+        <img src="../images/tau/3.2.webp">
+    </div>
 </body>
