home page projects pages done

--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
-          <h2><a href="./projects/tau.html">Tau</a></h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-          <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
+          <h2><a href="./projects/tau.html">Tau</a></h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
+          <p>Made using Blender's sculpting mode and a Wacom Bamboo.</p>
         </div><div></div>
         <a class="slideshow_container" href="./projects/tau.html" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
-            <!-- <img src="./images/tau/3.2.webp"> -->
-            <!-- <img src="./images/tau/3.3.webp"> -->
         </a>
     </div>
 <!---------------------------------------------------------------------------blender video-->
@@ -46,7 +45,7 @@
             <h2>Parallel Dimensions</h2><h3>Blender - Cycles X</h3><h3>June 2021</h3>
             <p>Created using the
                 <a href="https://www.pny.com/promo/professional/parallel-dimensions">Parallel Dimensions Contest</a>
-            template files (not submitted tho)</p>
+            template files (not submitted tho).</p>
         </div><div></div>
         <div class="video_container">
             <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/4l4iJoss6ek?autoplay=1&mute=1&loop=1">
@@ -56,36 +55,32 @@
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
-          <h2>Ile des vivants / Ile des morts</h2><h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
+          <h2><a href="./projects/ile.html">Ile des vivants / Ile des morts</a></h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
+          <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings.</p>
           <p></p>
         </div><div></div>
-        <div class="slideshow_container" data-cycle="3000">
-            <!-- <img src="./images/iles/morts nofog.webp"> -->
+        <a class="slideshow_container" href="./projects/ile.html" data-cycle="3000">
             <img src="./images/iles/morts.webp">
-            <!-- <img src="./images/iles/mortsz.webp">
-            <img src="./images/iles/vivants.webp">
-            <img src="./images/iles/vivants2.webp"> -->
-        </div>
+        </a>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
             <div class="article_text">
-              <h2>Semiotic Tower</h2><h3>Blender Cycles</h3><h3>May 2018</h3>
+              <h2><a href="./projects/tower.html">Semiotic Tower</a></h2>
+              <h3>Blender Cycles</h3><h3>May 2018</h3>
             </div><div></div>
-            <!-- <div class="article_image">
+            <a class="slideshow_container" href="./projects/tower.html" data-cycle="3000">
                 <img src="./images/foss/foss35HD4.webp">
-            </div> -->
-            <div class="slideshow_container" data-cycle="3000">
-                <img src="./images/foss/foss35HD4.webp">
-                <!-- <img src="./images/foss/anim.webp"> -->
-            </div>
+            </a>
     </div>
 <!---------------------------------------------------------------------------blender video-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
             <h2>Gaya</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
             <p>Presentation test for Gaya, a font made by
-                <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie</a></p>
+                <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie.</a>
+            </p>
         </div><div></div>
         <div class="video_container">
             <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/Kx8EhvC_DKE?autoplay=1&mute=1&loop=1">
@@ -113,18 +108,12 @@
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
-          <h2>Up / Down</h2><h3>Blender Cycles</h3><h3>Janvier 2017</h3>
+          <h2><a href="./projects/up_down.html">Up / Down</a></h2>
+          <h3>Blender Cycles</h3><h3>January 2017</h3>
         </div><div></div>
-        <div class="slideshow_container" data-cycle="3000">
-            <!-- <img src="./images/up_down/2updown.webp"> -->
-            <!-- <img src="./images/up_down/2updown2.webp"> -->
+        <a class="slideshow_container" href="./projects/up_down.html" data-cycle="3000">
             <img src="./images/up_down/2updown3.webp">
-            <!-- <img src="./images/up_down/updown4.webp"> -->
-            <!-- <img src="./images/up_down/updown5.webp"> -->
-            <!-- <img src="./images/up_down/updown6.webp"> -->
-            <!-- <img src="./images/up_down/updown7.webp"> -->
-            <!-- <img src="./images/up_down/updownfunkg2ss.webp"> -->
-        </div>
+        </a>
     </div>
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
@@ -138,16 +127,14 @@
 <!---------------------------------------------------------------------------blender-->
     <div class="article_container" href='./home.html'>
         <div class="article_text">
-          <h2>Typhoon</h2><h3>Blender Cycles</h3><h3>2015</h3>
-          <p>Created using a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint<p>
+          <h2><a href="./projects/typhoon.html">Typhoon</a></h2>
+          <h3>Blender Cycles</h3><h3>2015 & 2021</h3>
+          <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a>
+          blueprint.
         </div><div></div>
-        <div class="slideshow_container" data-cycle="3000">
-            <!-- <img src="./images/typhoon/untitled4.webp"> -->
-            <img src="./images/typhoon/untitled5.1.webp">
-            <!-- <img src="./images/typhoon/untitled5.2.webp"> -->
-            <!-- <img src="./images/typhoon/untitled5.3.webp"> -->
-            <!-- <img src="./images/typhoon/untitled5.webp"> -->
-        </div>
+        <a class="slideshow_container" href="./projects/typhoon.html" data-cycle="3000">
+            <img src="./images/typhoon/2.2.webp">
+        </a>
     </div>
 <!---------------------------------------------------------------------------EOF-->
     <h1></h1>
