--- a/projects/ile.html
+++ b/projects/ile.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Tau project</title>
+    <title>Zodiac - Ile des morts project</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -27,11 +27,13 @@
         </div>
     </header>
 <!---------------------------------------------------------------------------HEADER END-->
-    <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-    <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
+    <h2>Ile des vivants / Ile des morts</h2><h3>Blender 3.0 - Cycles X</h3><h3>October 2020</h3>
+    <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings</p>
     <div class="project_layout">
-        <img src="../images/tau/3.1.webp">
-        <img src="../images/tau/3.3.webp">
-        <img src="../images/tau/3.2.webp">
+        <img src="../images/iles/morts nofog.webp">
+        <img src="../images/iles/morts.webp">
+        <img src="../images/iles/vivants.webp">
+        <img src="../images/iles/vivants2.webp">
+        <img src="../images/iles/mortsz.webp">
     </div>
 </body>
