--- a/projects/tower.html
+++ b/projects/tower.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Tau project</title>
+    <title>Zodiac - Semiotic Tower project</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -27,11 +27,10 @@
         </div>
     </header>
 <!---------------------------------------------------------------------------HEADER END-->
-    <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-    <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
+    <h2>Semiotic Tower</h2><h3>Blender - Cycles</h3><h3>May 2018</h3>
+    <!-- <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings</p> -->
     <div class="project_layout">
-        <img src="../images/tau/3.1.webp">
-        <img src="../images/tau/3.3.webp">
-        <img src="../images/tau/3.2.webp">
+        <img src="../images/foss/foss35HD4.webp">
+        <img src="../images/foss/anim.webp">
     </div>
 </body>
