--- a/projects/typhoon.html
+++ b/projects/typhoon.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Tau project</title>
+    <title>Zodiac - Typhoon project</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -27,11 +27,22 @@
         </div>
     </header>
 <!---------------------------------------------------------------------------HEADER END-->
-    <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-    <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
+    <h2>Typhoon</h2>
+    <h3>Blender - Cycles</h3><h3>2015 & 2021</h3>
+    <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a>
+    blueprint.<br>
+    I came back to this project this year when I noticed
+    the blatant absence of shocks, and made a few more renders.<p>
     <div class="project_layout">
-        <img src="../images/tau/3.1.webp">
-        <img src="../images/tau/3.3.webp">
-        <img src="../images/tau/3.2.webp">
+        <img src="../images/typhoon/2.3.webp">
+        <img src="../images/typhoon/2.2.webp">
+        <img src="../images/typhoon/2.4.webp">
+        <img src="../images/typhoon/2.5.webp">
+        <img src="../images/typhoon/2.1.webp">
+        <img src="../images/typhoon/untitled4.webp">
+        <img src="../images/typhoon/untitled5.3.webp">
+        <img src="../images/typhoon/untitled5.2.webp">
+        <img src="../images/typhoon/untitled5.1.webp">
+        <img src="../images/typhoon/2.6.webp">
     </div>
 </body>
