--- a/projects/up_down.html
+++ b/projects/up_down.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Tau project</title>
+    <title>Zodiac - Up / Down project</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -27,11 +27,15 @@
         </div>
     </header>
 <!---------------------------------------------------------------------------HEADER END-->
-    <h2>Tau</h2><h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-    <p>Made using Blender's sculpting mode and a Wacom Bamboo</p>
+    <h2>Up / Down</h2><h3>Blender - Cycles</h3><h3>January 2017</h3>
     <div class="project_layout">
-        <img src="../images/tau/3.1.webp">
-        <img src="../images/tau/3.3.webp">
-        <img src="../images/tau/3.2.webp">
+        <img src="../images/up_down/2updown.webp">
+        <img src="../images/up_down/2updown2.webp">
+        <img src="../images/up_down/2updown3.webp">
+        <img src="../images/up_down/updown4.webp">
+        <img src="../images/up_down/updown5.webp">
+        <img src="../images/up_down/updown6.webp">
+        <img src="../images/up_down/updown7.webp">
+        <img src="../images/up_down/updownfunkg2ss.webp">
     </div>
 </body>
