--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="article_text">
           <h2><a href="./projects/tau.html">Tau</a></h2>
           <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
-          <p>Made using Blender's sculpting mode and a Wacom Bamboo.</p>
+          <p>Made using Blender's sculpting mode and a Wacom tablet.</p>
         </div><div></div>
         <a class="slideshow_container" href="./projects/tau.html" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
