--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 <!---------------------------------------------------------------------------HEADER END-->
     <a
         href="mailto:2tqdd9wpn@relay.firefox.com?subject=[Zodiac Website Contact] - "
-        style="text-decoration: none; display: flex; align-items: flex-end; border-top: 1px solid white;"
+        style="text-decoration: none; display: flex; align-items: flex-end; border-top: 1px solid white; width: 700px;"
     >
         <img
             style="margin-right: 20px; margin-bottom: 4px;"
