--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◾</text></svg>">
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image: url('./images/typhoon/2.4.webp');">
+<body id="background">
     <header>
         <div style="margin-right: 100px;">
             <h1><a href='./index.html'>Zødiac</a></h1>
