created templating system

--- a/index.html
+++ b/index.html
@@ -27,116 +27,120 @@
             </a>
         </div>
     </header>
-<!---------------------------------------------------------------------------HEADER END-->
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- HEADER END -->
+<!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
+    <div class="article_container">
         <div class="article_text">
           <h2><a href="./projects/tau.html">Tau</a></h2>
           <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
           <p>Made using Blender's sculpting mode and a Wacom tablet.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/tau.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/Tau.html" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
-        </a>
+						</a>
     </div>
-<!---------------------------------------------------------------------------blender video-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Video, Blender 3.0, Cycles X -->
+    <div class="article_container">
         <div class="article_text">
-            <h2>Parallel Dimensions</h2><h3>Blender - Cycles X</h3><h3>June 2021</h3>
-            <p>Created using the
-                <a href="https://www.pny.com/promo/professional/parallel-dimensions">Parallel Dimensions Contest</a>
-            template files (not submitted tho).</p>
+          <h2>Parallel Dimensions</h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>June 2021</h3>
+          <p>Created using the <a href="https://www.pny.com/promo/professional/parallel-dimensions">Parallel Dimensions Contest</a> template files (not submitted tho).</p>
         </div><div></div>
         <div class="video_container">
             <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/4l4iJoss6ek?autoplay=1&mute=1&loop=1">
             </iframe>
         </div>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
+    <div class="article_container">
         <div class="article_text">
           <h2><a href="./projects/ile.html">Ile des vivants / Ile des morts</a></h2>
           <h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
           <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings.</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Ile des vivants / Ile des morts.html" data-cycle="3000">
+            <img src="./images/iles/morts.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/tower.html">Semiotic Tower</a></h2>
+          <h3>Blender - Cycles</h3><h3>May 2018</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/ile.html" data-cycle="3000">
-            <img src="./images/iles/morts.webp">
-        </a>
+        <a class="slideshow_container" href="./projects/Semiotic Tower.html" data-cycle="3000">
+            <img src="./images/foss/foss35HD4.webp">
+						</a>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
-            <div class="article_text">
-              <h2><a href="./projects/tower.html">Semiotic Tower</a></h2>
-              <h3>Blender Cycles</h3><h3>May 2018</h3>
-            </div><div></div>
-            <a class="slideshow_container" href="./projects/tower.html" data-cycle="3000">
-                <img src="./images/foss/foss35HD4.webp">
-            </a>
-    </div>
-<!---------------------------------------------------------------------------blender video-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Video, Blender 3.0, Cycles X -->
+    <div class="article_container">
         <div class="article_text">
-            <h2>Gaya</h2><h3>Blender 3.0 Alpha - Cycles X</h3><h3>June 2021</h3>
-            <p>Presentation test for Gaya, a font made by
-                <a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie.</a>
-            </p>
+          <h2>Gaya</h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>June 2021</h3>
+          <p>Presentation test for Gaya, a font made by
+<a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie.</a></p>
         </div><div></div>
         <div class="video_container">
             <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/Kx8EhvC_DKE?autoplay=1&mute=1&loop=1">
             </iframe>
         </div>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
         <div class="article_text">
           <h2><a href="./projects/typhoon.html">Typhoon</a></h2>
-          <h3>Blender Cycles</h3><h3>2015 & 2021</h3>
-          <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a>
-          blueprint.
+          <h3>Blender - Cycles</h3><h3>2015 & 2021</h3>
+          <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a>blueprint.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/typhoon.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/Typhoon.html" data-cycle="3000">
             <img src="./images/typhoon/2.3.webp">
-        </a>
+						</a>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
         <div class="article_text">
-          <h2>Tout va bien</h2><h3>Blender Cycles</h3><h3>Avril 2021</h3>
+          <h2>Tout va bien</h2>
+          <h3>Blender - Cycles</h3><h3>April 2021</h3>
+          <p></p>
         </div><div></div>
-        <div class="article_image">
-            <img src="./images/tvb.webp"></img>
-        </div>
+        <a class="slideshow_container" href="./projects/Tout va bien.html" data-cycle="3000">
+            <img src="./images/tvb.webp">
+						</a>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Blender Cycles, Quixel Mixer & Bridge -->
+    <div class="article_container">
         <div class="article_text">
-          <h2>Farm</h2><h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>Octobre 2020</h3>
+          <h2>Farm</h2>
+          <h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>October 2020</h3>
+          <p></p>
         </div><div></div>
-        <div class="article_image">
-            <img src="./images/farm.webp"></img>
-        </div>
+        <a class="slideshow_container" href="./projects/Farm.html" data-cycle="3000">
+            <img src="./images/farm.webp">
+						</a>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
         <div class="article_text">
           <h2><a href="./projects/up_down.html">Up / Down</a></h2>
-          <h3>Blender Cycles</h3><h3>January 2017</h3>
+          <h3>Blender - Cycles</h3><h3>January 2017</h3>
+          <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/up_down.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/Up / Down.html" data-cycle="3000">
             <img src="./images/up_down/2updown3.webp">
-        </a>
+						</a>
     </div>
-<!---------------------------------------------------------------------------blender-->
-    <div class="article_container" href='./home.html'>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
         <div class="article_text">
-          <h2>Conq</h2><h3>Blender Cycles</h3><h3>2021</h3>
+          <h2>Conq</h2>
+          <h3>Blender - Cycles</h3><h3>2021</h3>
+          <p></p>
         </div><div></div>
-        <div class="article_image">
-            <img src="./images/conq.webp"></img>
-        </div>
-    </div>
-<!---------------------------------------------------------------------------EOF-->
+        <a class="slideshow_container" href="./projects/Conq.html" data-cycle="3000">
+            <img src="./images/conq.webp">
+						</a>
+    </div><!--------------------------------------------------------------------------- EOF -->
     <h1></h1>
-    <h2 style="text-align: right;"><a href='./older.html'>Older ⭢</a></h2>
+    <h2 style="text-align: right;"><a href='./older_works.html'>Older ⭢</a></h2>
 </body>
