--- a/projects/up_down.html
+++ b/projects/up_down.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◾</text></svg>">
     <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
     <header>
         <div style="margin-right: 100px;">
@@ -26,8 +27,7 @@
             </a>
         </div>
     </header>
-<!---------------------------------------------------------------------------HEADER END-->
-    <h2>Up / Down</h2><h3>Blender - Cycles</h3><h3>January 2017</h3>
+<!--------------------------------------------------------------------------- HEADER END -->    <h2>Up / Down</h2><h3>Blender - Cycles</h3><h3>January 2017</h3>
     <div class="project_layout">
         <img src="../images/up_down/2updown.webp">
         <img src="../images/up_down/2updown2.webp">
