aggregation pages creation done

--- a/3d.html
+++ b/3d.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Older Works</title>
+    <title>Zodiac - 3d projects</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -39,6 +39,75 @@
         </div>
     </header>
 <!--------------------------------------------------------------------------- HEADER END -->
+<!--------------------------------------------------------------------------- Video, Blender 3.0, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Parallel Dimensions</h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>June 2021</h3>
+          <p>Created using the <a href="https://www.pny.com/promo/professional/parallel-dimensions">Parallel Dimensions Contest</a> template files (not submitted tho).</p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/4l4iJoss6ek?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
+    </div>
+<!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/ile.html">Ile des vivants / Ile des morts</a></h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
+          <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings.</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Ile des vivants / Ile des morts.html" data-cycle="3000">
+            <img src="./images/iles/morts.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Video, Blender 3.0, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Gaya</h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>June 2021</h3>
+          <p>Presentation test for Gaya, a font made by
+<a href="https://www.raphaeldelamorinerie.fr/">Raphaël de La Morinerie.</a></p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/Kx8EhvC_DKE?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/typhoon.html">Typhoon</a></h2>
+          <h3>Blender - Cycles</h3><h3>2015 & 2021</h3>
+          <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint.</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Typhoon.html" data-cycle="3000">
+            <img src="./images/typhoon/2.3.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Tout va bien</h2>
+          <h3>Blender - Cycles</h3><h3>April 2021</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Tout va bien.html" data-cycle="3000">
+            <img src="./images/tvb.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Conq</h2>
+          <h3>Blender - Cycles</h3><h3>2021</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Conq.html" data-cycle="3000">
+            <img src="./images/conq.webp">
+						</a>
+    </div>
 <!--------------------------------------------------------------------------- Blender, Cycles, Quixel Mixer & Bridge -->
     <div class="article_container">
         <div class="article_text">
@@ -61,6 +130,50 @@
             <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/bzI4PHsz-H4?autoplay=1&mute=1&loop=1">
             </iframe>
         </div>
+    </div>
+<!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/tau.html">Tau</a></h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
+          <p>Made using Blender's sculpting mode and a Wacom tablet.</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Tau.html" data-cycle="3000">
+            <img src="./images/tau/3.1.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender Cycles, Quixel Mixer & Bridge -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Farm</h2>
+          <h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>October 2020</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Farm.html" data-cycle="3000">
+            <img src="./images/farm.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/tower.html">Semiotic Tower</a></h2>
+          <h3>Blender - Cycles</h3><h3>May 2018</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Semiotic Tower.html" data-cycle="3000">
+            <img src="./images/foss/foss35HD4.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/up_down.html">Up / Down</a></h2>
+          <h3>Blender - Cycles</h3><h3>January 2017</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Up / Down.html" data-cycle="3000">
+            <img src="./images/up_down/2updown3.webp">
+						</a>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -85,28 +198,6 @@
             <img src="./images/colosse.webp">
 						</a>
     </div>
-<!--------------------------------------------------------------------------- Blender, Cycles -->
-    <div class="article_container">
-        <div class="article_text">
-          <h2>Stuka</h2>
-          <h3>Blender - Cycles</h3><h3>December 2016</h3>
-          <p></p>
-        </div><div></div>
-        <a class="slideshow_container" href="./projects/Stuka.html" data-cycle="3000">
-            <img src="./images/stuka.webp">
-						</a>
-    </div>
-<!--------------------------------------------------------------------------- Blender, Cycles -->
-    <div class="article_container">
-        <div class="article_text">
-          <h2>TriBot</h2>
-          <h3>Blender - Cycles</h3><h3>2015</h3>
-          <p></p>
-        </div><div></div>
-        <a class="slideshow_container" href="./projects/TriBot.html" data-cycle="3000">
-            <img src="./images/tribot.webp">
-						</a>
-    </div>
 <!--------------------------------------------------------------------------- Video, Blender, Cycles -->
     <div class="article_container">
         <div class="article_text">
@@ -122,12 +213,45 @@
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
         <div class="article_text">
+          <h2>Stuka</h2>
+          <h3>Blender - Cycles</h3><h3>December 2016</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Stuka.html" data-cycle="3000">
+            <img src="./images/stuka.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
           <h2>Death</h2>
           <h3>Blender - Cycles</h3><h3>2016</h3>
           <p></p>
         </div><div></div>
         <a class="slideshow_container" href="./projects/Death.html" data-cycle="3000">
             <img src="./images/death.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Ortho Bedroom</h2>
+          <h3>Blender - Cycles</h3><h3>2016</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/Ortho Bedroom.html" data-cycle="3000">
+            <img src="./images/ortho_bedroom.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>TriBot</h2>
+          <h3>Blender - Cycles</h3><h3>2015</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/TriBot.html" data-cycle="3000">
+            <img src="./images/tribot.webp">
 						</a>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
@@ -164,17 +288,6 @@
             <img src="./images/4K.webp">
 						</a>
     </div>
-<!--------------------------------------------------------------------------- Blender, Cycles -->
-    <div class="article_container">
-        <div class="article_text">
-          <h2>Ortho Bedroom</h2>
-          <h3>Blender - Cycles</h3><h3>2016</h3>
-          <p></p>
-        </div><div></div>
-        <a class="slideshow_container" href="./projects/Ortho Bedroom.html" data-cycle="3000">
-            <img src="./images/ortho_bedroom.webp">
-						</a>
-    </div>
 <!--------------------------------------------------------------------------- Blender, Internal -->
     <div class="article_container">
         <div class="article_text">
@@ -196,8 +309,4 @@
         <a class="slideshow_container" href="./projects/Orange Verte.html" data-cycle="3000">
             <img src="./images/orange.webp">
 						</a>
-    </div><!--------------------------------------------------------------------------- EOF -->
-    <h1></h1>
-    <h2 style="text-align: left;"><a href='./index.html'>⭠ Recent works</a></h2>
-    <script src="https://zodiacfra.github.io/ZodiacFRA/scripts/slideshow.js"></script>
-</body>
+    </div>
