--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <img
             style="margin-right: 20px; margin-bottom: 4px;"
             class="header_icon"
-            src="./images/misc/email.svg"
+            src="./images/misc/email-svgrepo-com.svg"
         >
         <div>
             <h2 style="border: none;">2tqdd9wpn@relay.firefox.com</h2>
