--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zodiac - Ile des morts project</title>
+    <title>Zodiac - Code projects</title>
     <meta charset="utf-8">
     <meta name="author" content="Zødiac">
     <meta name="description" content="Personal website">
@@ -9,21 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◾</text></svg>">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header>
         <div style="margin-right: 100px;">
-            <h1><a href='../index.html'>Zødiac</a></h1>
+            <h1><a href='./index.html'>Zødiac</a></h1>
             <h3 style='margin-top: -16px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
-          <a href="../3d.html" class="header_block">
+          <a href="./3d.html" class="header_block">
             <img class="header_icon" style="height: auto; width: 33px; margin-top: 9px;" src="./images/misc/layers-svgrepo-com.svg">
             <h2 class="header_link">3D</h2>
           </a>
-          <a href="../code.html" class="header_block">
+          <a href="./code.html" class="header_block">
             <img class="header_icon" style="height: auto; width: 44px; margin-top: 12px;" src="./images/misc/keyboard-svgrepo-com.svg">
             <h2 class="header_link">Code</h2>
           </a>
@@ -31,20 +31,11 @@
             <img class="header_icon" style="height: auto; width: 36px; margin-top: 10px;" src="./images/misc/github-svgrepo-com.svg">
             <h2 class="header_link">Github</h2>
           </a>
-          <a href="../contact.html" class="header_block">
+          <a href="./contact.html" class="header_block">
             <img class="header_icon" style="height: auto; width: 40px; margin-top: 12px;" src="./images/misc/email-svgrepo-com.svg">
             <h2 class="header_link">Contact</h2>
           </a>
 
         </div>
     </header>
-<!--------------------------------------------------------------------------- HEADER END -->    <h2>Ile des vivants / Ile des morts</h2><h3>Blender 3.0 - Cycles X</h3><h3>October 2020</h3>
-    <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings</p>
-    <div class="project_layout">
-        <img src="../images/iles/morts nofog.webp">
-        <img src="../images/iles/morts.webp">
-        <img src="../images/iles/vivants.webp">
-        <img src="../images/iles/vivants2.webp">
-        <img src="../images/iles/mortsz.webp">
-    </div>
-</body>
+<!--------------------------------------------------------------------------- HEADER END -->
