--- a/projects/tower.html
+++ b/projects/tower.html
@@ -19,12 +19,23 @@
             <h3 style='margin-top: -16px'>Code & 3d art</h3>
         </div>
         <div class="header_icons">
-            <a href='https://github.com/ZodiacFRA'>
-                <img class="header_icon" src="../images/misc/github.svg">
-            </a>
-            <a href="../contact.html">
-                <img class="header_icon" src="../images/misc/email.svg">
-            </a>
+          <a href="../3d.html" class="header_block">
+            <img class="header_icon" style="height: auto; width: 33px; margin-top: 9px;" src="./images/misc/layers-svgrepo-com.svg">
+            <h2 class="header_link">3D</h2>
+          </a>
+          <a href="../code.html" class="header_block">
+            <img class="header_icon" style="height: auto; width: 44px; margin-top: 12px;" src="./images/misc/keyboard-svgrepo-com.svg">
+            <h2 class="header_link">Code</h2>
+          </a>
+          <a href="https://github.com/ZodiacFRA" class="header_block">
+            <img class="header_icon" style="height: auto; width: 36px; margin-top: 10px;" src="./images/misc/github-svgrepo-com.svg">
+            <h2 class="header_link">Github</h2>
+          </a>
+          <a href="../contact.html" class="header_block">
+            <img class="header_icon" style="height: auto; width: 40px; margin-top: 12px;" src="./images/misc/email-svgrepo-com.svg">
+            <h2 class="header_link">Contact</h2>
+          </a>
+
         </div>
     </header>
 <!--------------------------------------------------------------------------- HEADER END -->    <h2>Semiotic Tower</h2><h3>Blender - Cycles</h3><h3>May 2018</h3>
