slideshow script added to all pages

--- a/older_works.html
+++ b/older_works.html
@@ -198,6 +198,6 @@
 						</a>
     </div><!--------------------------------------------------------------------------- EOF -->
     <h1></h1>
-    <h2 style="text-align: left;"><a href='./index.html'>⭠ Recent works</a></h2>
+    <h2 style="text-align: right;"><a href='./older_works.html'>Older ⭢</a></h2>
     <script src="https://zodiacfra.github.io/ZodiacFRA/scripts/slideshow.js"></script>
 </body>
